Update Flaky ToolbarActionViewInteractiveUITests

Update ActivateOverflowedToolbarActionWithKeyboard to block on final keyboard
event, then clear the pending messages, before confirming the final state.

Update TestContextMenuOnOverflowedAction. Remove the concept of the context
menu callback, this is no longer needed with the menus not nesting message
loops. Instead of posting tasks to the message loop in order to continue the
test, they will be called directly. The message loop will still be ran until
idle in order to allow for the processing of UI events.

TEST=
ToolbarActionViewInteractiveUITests.ActivateOverflowedToolbarActionWithKeyboard,
ToolbarActionViewInteractiveUITests.TestContextMenuOnOverflowedAction
BUG=638692, 639010

Review-Url: https://codereview.chromium.org/2259353002
Cr-Commit-Position: refs/heads/master@{#414549}

Former-commit-id: cd6568bdc044afe156d1bf4bb29cb3be213d615a